color contrast fixed

--- a/styles/filtered-temples.css
+++ b/styles/filtered-temples.css
@@ -210,7 +210,7 @@ h1 {
 .temple-card figcaption p.dedicated,
 .temple-card figcaption p.area {
     font-size: 0.8em;
-    color: #555;
+    color: #444;
 }
 
 /* ===== FOOTER ===== */
